@@ -22,7 +22,7 @@ AC_PROG_INSTALL
 AC_HEADER_STDC
 AC_C_CONST
 AC_TYPE_SIZE_T
-AC_CHECK_FUNCS(pread pwrite mmap munmap)
+AC_CHECK_FUNCS(pread pwrite mmap munmap getpagesize)
 AC_CHECK_HEADERS(fcntl.h unistd.h malloc.h)
 AC_TYPE_OFF_T
 AC_FUNC_MMAP
