@@ -30,10 +30,18 @@
 #include "error.h"
 #include "os.h"
 
-#ifdef HAVE_GETPAGESIZE_INT
+#if 0
+/*
+ * on some systems, the getpagesize() funciton is not in unistd.h;
+ * therefore it's declared here
+ */
+#ifndef HAVE_GETPAGESIZE
+#  ifdef HAVE_GETPAGESIZE_INT
 extern int getpagesize();
-#else
+#  else
 extern size_t getpagesize();
+#  endif
+#endif
 #endif
 
 static ham_status_t
